# dsa-to-ai-systems-engineering

./: .flake8  .gitignore  Makefile  playground.py  pyproject.toml  readme.md
.github/workflows/: ci.yml
01_core_dsa/arrays/: dynamic_array.py  readme.md
core_dsa/: readme.md
core_dsa/algorithms/: astar.py  bellman_ford.py  bfs.py  cycle_detection.py  dfs.py  dijkstra.py  kadane.py  kruskal.py  prefix_sum.py  prim.py  readme.md  sliding_window.py  string_algorithms.py  strongly_connected_components.py  topological_sort.py
core_dsa/arrays/: dynamic_array.py
core_dsa/graphs/: adjacency_list.py  disjoint_set.py  readme.md
core_dsa/heap/: indexed_priority_queue.py  readme.md
core_dsa/nlp/: byte_level_bpe.py  byte_pair_encoding.py  ngram_generator.py  sentence_tokenizer.py  tokenizer.py  vocabulary.py
docs/algorithms/: array_algorithms.md  graph_algorithms.md  string_algorithms.md
docs/data_structures/: arrays.md  graphs.md  heap.md
docs/route_optimizer/: api.md  architecture.md  map_format.md  routing_pipeline.md
docs/templates/: algorithms_template.md
system_design/kv_store/engine/: background_cleaner.py  clock.py  expiration_entry.py  expiration_manager.py  record.py  store.py
system_design/kv_store/services/: kv_store_service.py
system_design/route_optimizer/: readme.md
system_design/route_optimizer/api/: dependencies.py  main.py  proxy_main.py
system_design/route_optimizer/config/: maps.json  security.py
tests/api/: test_route.py
tests/data/: generate_grid_graph.py  grid_10.json  grid_50.json  small_map.json
(+66 files in other folders)
