[project]
name = "butterbiscuit"
version = "0.1.0"
description = "An engineering platform for data structures, system design, and AI"
authors = [
    { name = "SK" }
]
readme = "readme.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "osmnx"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "flake8",
    "black"
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core_dsa*", "system_design*"]